--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> Esta es mi primera página con GitHub Pages </h1>
-<p>¡Gracias GitHub!</p>
+<h1> Todos me la pelan </h1>
+<p>¡Viva el metal, los culos grandes y la cerveza!</p>
 </html>
