--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> Todos me la pelan </h1>
-<p>¡Viva el metal, los culos grandes y la cerveza!</p>
+<h1> i hate them all </h1>
+<p>¡if you stare into the abyss, the abyss stares back at you!</p>
 </html>
