--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> i hate them all </h1>
-<p>¡if you stare into the abyss, the abyss stares back at you!</p>
+<h1> Odiamos a la 4T !!! </h1>
+<p>¡viva el metal, la cerveza y los culos grandes!</p>
 </html>
